# selenium-basics

./: .env.sample  README.md  basic.py  cookie_clicker_bot.py  example_automation.py  instagram_follow_bot.py  internet_speed_complainer_bot.py  job_aplicator_bot.py  pyproject.toml  tinder_swipe_bot.py
